consistent css style for all pages

--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -4,12 +4,17 @@
       background-repeat: no-repeat;
       color: #fff;
       background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
+      margin: 8rem 10rem;
     }
 
     html {
       height: 100%;
     }
 
+    h1{
+      text-align: center;
+    }
+    
     .buttons{
       display: flex;
       align-items: left;
