--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -4,10 +4,15 @@
       background-repeat: no-repeat;
       color: #fff;
       background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+      margin: 8rem 10rem;
     }
 
     html {
       height: 100%;
+    }
+
+    h1{
+      text-align: center;
     }
 
     .content {
@@ -36,10 +41,12 @@
     }
 
     .btn-transparent {
-      background-color: rgba(255, 255, 255, 0.15);
+      background-color: rgba(255, 255, 255, 0.25);
       color: white;
       border: 0.5px solid white;
       padding: 5px 20px;
+      margin: 20px 0;
+      width: 100%;
     }
   </style>
 
