--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -8,13 +8,30 @@
       background-repeat: no-repeat;
       color: #fff;
       background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
+      margin: 8rem 10rem;
     }
 
+    .center{
+      display: flex;
+      align-items: center; 
+      justify-content: center;
+      margin: 10rem 0;
+    }
 
-    .title{
+    .box{
+      margin: 30px;
+      border: 2px solid #D9D9D9;
+      border-radius: .4em;
+      width: 90%;
+      padding: 30px 0;          
+    }
+
+    h1{
       text-align: center;
-      font-size: 48px;
-      font-weight: bold;
+    }
+
+    .content{
+      padding: 10px 50px;
     }
 
     .info{
@@ -26,47 +43,26 @@
     }
 
     .text {
-      font-size: 20px;
+      font-size: 19px;
     }
   </style>
+
   <body>
+    <div class="center">
+      <div class="box">
+        <h1><%= @blog.title %></h1>
 
-    <div class="content_block">
-      <div class="conent">
-        <div class="info">
-          <p><strong>Author: </strong> <%= @blog.user.username %></p>
-          <p><strong>Date: </strong><%= @blog.created_at %></p>
+        <div class="content">
+          <div class="info">
+            <p><strong>Author: </strong> <%= @blog.user.username %></p>
+            <p><strong>Date: </strong> <%= @blog.created_at %></p>
+          </div>
+
+          <div class="text">
+            <%= @blog.content %>
+          </div>
         </div>
-        <div class="text">
-          <%= @blog.content %>
-        </div>
       </div>
-
-      <div class="col-sm-7">
-      </div>
-    </div>
-
-
-
-
-    <div class="title"><%= @blog.title %></div>
-
-    <div class="content_block">
-      <div class="conent">
-        <div class="info">
-
-        <p><strong>Author: </strong> <%= @blog.user.username %></p>
-        <p><strong>Date: </strong> <%= @blog.created_at %></p>
-        <%= @blog.content %>
-      </div>
-
-      <div class="text">
-        <%= @blog.content %>
-      </div>
-    </div>
-
-    <div class="col-sm-7">
-
     </div>
   </body>
 </html>
