Debug - background whitespace

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,6 +7,7 @@
 
     body {
       background-repeat: no-repeat;
+      background-attachment: fixed;
       color: #fff;
       background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
       margin: 8rem 10rem ;
