--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
   <style>
     body {
       background-repeat: no-repeat;
+      background-attachment: fixed;
       color: #fff;
       background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%); 
       margin: 8rem 10rem ;
