--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,6 +22,10 @@
       </div>
 
       <div class="mb-3">
+        <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
+      </div>
+
+      <div class="mb-3">
         <%= f.password_field :password, class: "form-control", placeholder: "Password" %>
       </div>
 
